# VAT-VIES-Validator-Batch-Excel

./: README.md  Test_Check_VAT.xlsx  Test_Check_VAT_resultats_TVA_20250811_162852.xlsx  _terminal_checker_base_vies.py  main_ch.py  pyproject.toml  requirements.txt
_archives_codes/: main_ch.py  main_cl.py  main_de.py
